fix to feiyou website

--- a/js/electron/index.html
+++ b/js/electron/index.html
@@ -24,24 +24,8 @@
                     <label>&nbsp;&nbsp;&nbsp;&nbsp;部门:&nbsp;&nbsp;&nbsp;</label>
                     <select name="bumen" class="bumen">
                         <option value="0">请选择</option>
-                        <option value="1">技术部</option>
-                        <option value="2">人事行政部</option>
-                        <option value="3">财务部</option>
-                        <option value="4">运营部</option>
-                        <option value="5">4667</option>
-                        <option value="6">5577</option>
-                        <option value="7">289</option>
-                        <option value="8">612</option>
-                        <option value="9">东坡</option>
-                        <option value="10">962</option>
-                        <option value="11">5h</option>
-                        <option value="12">k73</option>
-                        <option value="14">飞翔</option>
-                        <option value="15">6071</option>
-                        <option value="16">upkao</option>
-                        <option value="17">商务</option>
-                        <option value="18">H5</option>
-                        <option value="19">QT6</option></select>
+                            <option value="22">行政人事部</option><option value="23">财务部</option><option value="24">商务部</option><option value="25" selected="selected">技术部</option><option value="26">西西软件</option><option value="27">腾牛网</option>
+                    </select>
                 </div>
                 <div class="input">
                     <label>自动点中餐</label>
